# Bizify-Backend

./: .coverage  .cursorrules  .env.example  .gitignore  AI_INTEGRATION_GUIDE.md  API_DOCUMENTATION.md  CHANGELOG.md  Dockerfile  FIXES.md  Makefile  README.md  ROUTES_INDEX.md  ROUTES_QUICK_REFERENCE.md  alembic.ini  cov_patterns.txt  coverage_report.txt  create_admin.sh  dev-requirements.txt  docker-compose.dev.yml  docker-compose.yml  final_coverage.txt  fix_dry.py  fix_mypy_no_any_return.py  fix_repo.py  fixes_in_backend_project.md  gunicorn.conf.py  handoff_to_frontend.md  health_check.py  main.py  mypy.ini  nginx.conf  out.txt  out2.txt  pip.conf  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_500.py  test_alembic_vector.py  (+8 more)
.autonomous_system/: DASHBOARD.md  LIVE_DASHBOARD.md  MODE_CONTROL_GUIDE.md  STARTUP_MODES_GUIDE.md  __init__.py  configure_path.py  configure_path.py.bak  elk_schema.txt  workers_state.json
.autonomous_system/ai/: ai_agent.py  ai_consultant.py  ai_observer.py  antigravity_helper.py  auto_approver.py  auto_assistant.py  claude_client.py  collaborative_coder.py  error_intelligence.py  file_indexer.py  gemini_client.py  smart_search.py  (+2 more)
.claude/: settings.local.json
alembic/: env.py
app/: main.py
bizify.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: __init__.py  pyproject.toml  settings.py
docs/: AI_EXPERT_HANDOFF.md  API_DOCUMENTATION.md  API_SCHEMA.md  ARCHITECTURE.md  BACKGROUND_REALTIME.md  BACKUP_AND_DR_STRATEGY.md  BIZIFY_FULL_DOCS.md  Bizify_API.postman_collection.json  CHANGELOG.md  CI_CD_PIPELINE.md  COVERAGE_ROADMAP.md  CRUD_OPERATIONS.md  DATABASE_CONNECTION.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DOCSTRING_GUIDE.md  ERROR_HANDLING.md  ERROR_HANDLING_EXAMPLES.md  ERROR_HANDLING_IMPROVEMENTS.md  FINAL_ASSESSMENT.md  IMPROVEMENTS_IMPLEMENTATION.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_ROADMAP.md  INTEGRATIONS.md  PHASE_4_COMPLETION_REPORT.md  PROGRESS_REPORT.md  QUICK_SUMMARY.md  ROLLBACK.md  ROUTES_ARCHITECTURE_SECURITY.md  ROUTES_DEVELOPER_SPEC.md  ROUTES_DOCUMENTATION.md  SECURITY.md  SECURITY_HARDENING.md  SERVICES_ARCHITECTURE_REPORT.md  SETUP_CONFIGURATION.md  SQLALCHEMY_TYPE_HINTS_IMPLEMENTATION.md  TECH_STACK.md  TESTING_PLAN.md  TESTING_REPORT.md  TYPE_HINTS_GUIDE.md  (+3 more)
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  rbac.yaml  service.yaml  worker-deployment.yaml
migrations/: add_instapay_reference.sql  add_language_support.sql
public/: index.html
scripts/: generate_rsa_keys.py  redis_async_load_test.py  seed_marketplace_partners.py  seed_marketplace_suppliers_manufacturers.py  seed_plans.py  seed_skills.py  smoke_test.py
seed_db/: seed_demo_accounts.py  seed_demo_data.py  seed_guidance.py  seed_hierarchical_skills.py  seed_skills.py
smoke_checks/: app_smoke_check.py
tests/: conftest.py  test_admin.py  test_ai_pipeline.py  test_alembic_vector.py  test_auth.py  test_billing.py  test_export.py  test_groups.py  test_guidance.py  test_health.py  test_ideas.py  test_import.py  test_marketplace.py  test_notifications.py  test_profile.py  test_settings.py  test_users.py
(+1040 files in other folders)
