[project]
name = "bizify"
version = "0.1.0"
description = "A professional FastAPI project for AI-driven business strategy"
authors = [
    {name = "Abdallah Abdelrhim", email = "abdallah@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pydantic[email]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<4.0.0",
    "python-multipart",
    "celery>=5.6.2",
    "redis>=7.0.1",
    "pypdf>=6.9.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]
requires-python = ">=3.9"

[tool.ruff]
# Enable professional linting rules
select = ["E", "F", "I", "B", "C4", "UP"]
line-length = 88
target-version = "py39"

[tool.setuptools]
packages = ["app"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
