[project]
name = "bizify"
version = "0.1.0"
description = "A professional FastAPI project for AI-driven business strategy"
authors = [
    {name = "Abdallah Abdelrhim", email = "abdallah@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pydantic[email]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<4.0.0",
    "python-multipart",
    "celery>=5.6.2",
    "redis>=7.0.1",
    "pypdf>=6.9.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "fpdf2>=2.8.4",
    "psycopg2-binary>=2.9.11",
    "fastapi-users>=12.1.3",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "requests>=2.32.5",
    "imagekitio>=5.2.0",
    "pyjwt>=2.8.0",
    "supabase>=2.12.0",
]
requires-python = ">=3.9"

[tool.ruff]
# Enable professional linting rules
select = ["E", "F", "I", "B", "C4", "UP"]
line-length = 88
target-version = "py39"

[tool.setuptools]
packages = ["app"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
